--- a/index.html
+++ b/index.html
@@ -3,40 +3,101 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + JS</title>
+    <title>Morning Star Health Care Services | OHC, Ambulance & Healthcare Solutions</title>
 
-    <meta name="description" content="Dualite Alpha Generated Project" />
-    <meta name="author" content="Dualite Alpha" />
+    <meta name="description" content="Leading healthcare provider offering Occupational Health Centre (OHC) services, 24/7 ambulance services, pre-employment medical examinations, first aid training, and home healthcare across Bangalore, Chennai, Hyderabad, Kolkata & Tamil Nadu." />
+    <meta name="author" content="Morning Star Health Care Services" />
+    <meta name="keywords" content="OHC services, ambulance services, healthcare, medical examinations, first aid training, home healthcare, Bangalore healthcare, emergency medical services" />
 
-    <meta property="og:title" content="vite + react + ts" />
-    <meta property="og:description" content="Dualite Alpha Generated Project" />
+    <meta property="og:title" content="Morning Star Health Care Services | Professional Healthcare Solutions" />
+    <meta property="og:description" content="Comprehensive healthcare services including OHC setup, 24/7 ambulance, medical training, and home healthcare across South India. Trusted by L&T, Vestian, Voltas and more." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://alpha.dualite.dev" />
-    <meta property="og:image" content="https://ibb.co/67X3xfSV" />
-    <meta property="og:image:width" content="960" />
-    <meta property="og:image:height" content="600" />
-    <meta property="og:image:alt" content="Screenshot of the Dualite Alpha Generated Project" />
+    <meta property="og:url" content="https://morningstarhealthcare.in" />
+    <meta property="og:image" content="https://morningstarhealthcare.in/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Morning Star Health Care Services - Professional Healthcare Provider" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="vite + react + js" />
-    <meta name="twitter:description" content="Dualite Alpha Generated Project" />
-    <meta name="twitter:site" content="@dualitedev" />
-    <meta name="twitter:image" content="https://ibb.co/67X3xfSV" />
+    <meta name="twitter:title" content="Morning Star Health Care Services | OHC & Healthcare Solutions" />
+    <meta name="twitter:description" content="Leading healthcare provider offering OHC services, ambulance, medical training and home healthcare across India." />
+    <meta name="twitter:image" content="https://morningstarhealthcare.in/og-image.jpg" />
 
-    <link rel="icon" type="image/png" sizes="16x16" href="https://i.ibb.co/HLfD5wgf/dualite-favicon.png" />
-    <link rel="canonical" href="https://alpha.dualite.dev" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="canonical" href="https://morningstarhealthcare.in" />
 
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "AlphaProject",
-        "url": "https://alpha.dualite.dev",
-        "description": "Dualite Alpha Generated Project",
-        "publisher": {
-          "@type": "Organization",
-          "name": "Dualite Alpha"
-        }
+        "@type": "MedicalOrganization",
+        "name": "Morning Star Health Care Services",
+        "alternateName": "MSHCS",
+        "url": "https://morningstarhealthcare.in",
+        "description": "Leading integrated healthcare network providing OHC services, ambulance services, medical examinations, training programs, and home healthcare solutions across India.",
+        "foundingDate": "2021",
+        "telephone": "+91-97901-54835",
+        "email": "morningstarhealthcareservicess@gmail.com",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Kanyakumari",
+          "addressRegion": "Tamil Nadu",
+          "addressCountry": "IN"
+        },
+        "areaServed": [
+          {
+            "@type": "City",
+            "name": "Bangalore"
+          },
+          {
+            "@type": "City",
+            "name": "Chennai"
+          },
+          {
+            "@type": "City",
+            "name": "Hyderabad"
+          },
+          {
+            "@type": "City",
+            "name": "Kolkata"
+          },
+          {
+            "@type": "State",
+            "name": "Tamil Nadu"
+          }
+        ],
+        "founder": {
+          "@type": "Person",
+          "name": "Dr. Subash David",
+          "jobTitle": "Founder & CEO"
+        },
+        "medicalSpecialty": [
+          "Occupational Health",
+          "Emergency Medicine",
+          "Preventive Medicine",
+          "Home Healthcare"
+        ],
+        "availableService": [
+          {
+            "@type": "MedicalService",
+            "name": "Occupational Health Centre Services"
+          },
+          {
+            "@type": "MedicalService",
+            "name": "Ambulance Services (BLS & ALS)"
+          },
+          {
+            "@type": "MedicalService",
+            "name": "Pre-Employment Medical Examinations"
+          },
+          {
+            "@type": "MedicalService",
+            "name": "First Aid & CPR Training"
+          },
+          {
+            "@type": "MedicalService",
+            "name": "Home Healthcare Services"
+          }
+        ]
       }
     </script>
   </head>
